[package]
name = "cba"
version = "0.1.0"
authors = ["Hyunmin Kang <myhyuny@live.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = 2
lto = true

[dependencies]
clap = { version = "4", features = ["derive"] }
lazy-regex = "3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winnls"] }
