[package]
name = "cba"
version = "0.1.0"
authors = ["Hyunmin Kang <myhyuny@live.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
opt-level = 2
lto = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lazy-regex = { version = "3", features = [
    "unicode-perl",
], default-features = false }
rayon = "1"
tempfile = "3"
zip = { version = "6", features = [
    "deflate-zopfli",
    "deflate-flate2-zlib",
], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winnls"] }

[lints.clippy]
needless_return = "allow"
